header структура html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,23 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    
+    <header class="header">
+        <nav class="nav">
+            <a href="" class="logo">Nike</a>
+            <ul class="menu">
+                <li class="menu__item"><a href="" class="menu__link">Кроссовки</a></li>
+                <li class="menu__item"><a href="" class="menu__link">Кеды</a></li>
+                <li class="menu__item"><a href="" class="menu__link">Футболки</a></li>
+                <li class="menu__item"><a href="" class="menu__link">Шорты</a></li>
+                <li class="menu__item"><a href="" class="menu__link">Майки</a></li>
+                <li class="menu__item"><a href="" class="menu__link">Олимпийки</a></li>
+                <li class="menu__item"><a href="" class="menu__link">Толстовки</a></li>
+            </ul>
+        </nav>
+        <div class="header__info">
+            <h1 class="header__title">Nike</h1>
+            <p class="header__desc">Практичная одежда, удобная <span class="header__desc_sp">Шорты</span> от китайского производителя</p>
+        </div>
+    </header>
 </body>
 </html>
