--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <li class="menu__item"><a href="" class="menu__link">Толстовки</a></li>
             </ul>
         </nav>
+        <button></button>
         <div class="header__info">
             <h1 class="header__title">Nike</h1>
             <p class="header__desc">Практичная одежда, удобная <span class="header__desc_sp">Шорты</span> от китайского производителя</p>
