--- a/index.html
+++ b/index.html
@@ -27,5 +27,10 @@
             <p class="header__desc">Практичная одежда, удобная <span class="header__desc_sp">Шорты</span> от китайского производителя</p>
         </div>
     </header>
+    <main>
+        <section>
+            <h2>Company</h2>
+        </section>
+    </main>
 </body>
 </html>
