--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
                 <li class="menu__item"><a href="" class="menu__link">Футболки</a></li>
                 <li class="menu__item"><a href="" class="menu__link">Шорты</a></li>
                 <li class="menu__item"><a href="" class="menu__link">Майки</a></li>
-                <li class="menu__item"><a href="" class="menu__link">Олимпийки</a></li>
-                <li class="menu__item"><a href="" class="menu__link">Толстовки</a></li>
+                <li class="menu__item"><a href="" class="menu__link">О нас</a></li>
+                <li class="menu__item"><a href="" class="menu__link">Контакты</a></li>
             </ul>
         </nav>
-        <button></button>
         <div class="header__info">
             <h1 class="header__title">Nike</h1>
             <p class="header__desc">Практичная одежда, удобная <span class="header__desc_sp">Шорты</span> от китайского производителя</p>
