--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
             <h2>Company</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima laudantium similique ea inventore maxime ipsa!</p>
         </section>
+        <section>
+            <h2>DIAS</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed dolorem ducimus placeat sit dolor. Mollitia omnis culpa exercitationem? Nihil, ducimus.</p>
+        </section>
     </main>
     <footer class="footer">
         <nav class="nav">
